test/fail_compilation/test7373.d
import foo = object;
int foo;
